Added all collections to swagger
